@@ -3,6 +3,7 @@ Trunk:
 * Automatically install dependencies again, but display the live output to the
   user.
 * Include C stub libraries in linker command when generating Makefiles for Xen.
+* generate a *.xe script which can upload a kernel to a XenServer
 
 1.2.0 (2014-07-05):
 
